--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
         "eslint": "^8.29.0",
         "flowbite": "^1.5.5",
         "flowbite-react": "^0.3.7",
+        "laravel-vite-plugin": "^0.7.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-helmet": "^6.1.0",
         "react-use": "^17.4.0",
-        "tailwindcss": "^3.2.4"
+        "tailwindcss": "^3.2.4",
+        "vite": "^4.1.1"
     }
 }
