--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-helmet": "^6.1.0",
+        "react-select": "^5.7.0",
         "react-use": "^17.4.0",
         "tailwindcss": "^3.2.4",
         "vite": "^4.1.1"
